--- a/Net5.PracticalDemo/Net5.PracticalDemo.csproj
+++ b/Net5.PracticalDemo/Net5.PracticalDemo.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AspNetCore.Service\AspNetCore.Service.csproj" />
+    <ProjectReference Include="..\AspNetrCore.interface\AspNetrCore.Interface.csproj" />
   </ItemGroup>
 
   <ItemGroup>
