--- a/Net5.PracticalDemo/Net5.PracticalDemo.csproj
+++ b/Net5.PracticalDemo/Net5.PracticalDemo.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AspNetCore.interface\AspNetrCore.Interface.csproj" />
     <ProjectReference Include="..\AspNetCore.Service\AspNetCore.Service.csproj" />
-    <ProjectReference Include="..\AspNetrCore.interface\AspNetrCore.Interface.csproj" />
   </ItemGroup>
 
   <ItemGroup>
