--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@
 bld/
 [Bb]in/
 [Oo]bj/
-
+MicroService集群和服务注册发现/
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
